{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b70388ab-b06e-4576-a665-9691204dc2bb",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "75e68d71-e66a-4cdd-83e7-4636410437c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Button",
                    "id": "20820594-1a89-447c-81f3-d35b342c841c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonX",
                    "type": "Button",
                    "id": "14b87448-0bcc-437d-bf7d-37eff97726ee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonB",
                    "type": "Button",
                    "id": "aa489604-0b82-4ba2-865f-d930c055681e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cab7af2-b410-4836-85d4-7ad50f0c0659",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bce0818-2d50-4b32-b2e2-0988a3607f6d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca97c933-92ca-4e43-9229-09bf0659b5d7",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9420aaca-e3c6-4b6a-9dea-2a304b774534",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}